--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "adm-zip": "^0.5.10",
     "archiver": "^6.0.1",
     "form-data": "^4.0.0",
-    "ignore": "^5.2.4"
+    "ignore": "^5.2.4",
+    "keytar": "^7.9.0"
   }
 }
